--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet">
+  <link rel=“stylesheet” href=“https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css”
+    integrity=“sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==”
+    crossorigin=“anonymous” referrerpolicy=“no-referrer” />
   <link rel="stylesheet" href="./css/styles.css">
   <title>WebStudio</title>
 </head>
@@ -16,103 +19,115 @@
 <body>
   <!-- Header -->
   <header class="header">
-    <a href="./index.html" class="header-logo link"><span>Web</span>Studio</a>
-    <!-- Navigation -->
-    <nav class="header-nav">
-      <ul class="nav list">
-        <li><a href="./index.html" class="nav-link link current">Студия</a></li>
-        <li><a href="./portfolio.html" class="nav-link link">Портфолио</a></li>
-        <li><a href="./contacts.html" class="nav-link link">Контакты</a></li>
+    <div class="header-container container">
+      <a href="./index.html" class="header-logo link"><span>Web</span>Studio</a>
+      <!-- Navigation -->
+      <nav class="header-nav">
+        <ul class="nav list">
+          <li><a href="./index.html" class="nav-link link current">Студія</a></li>
+          <li><a href="./portfolio.html" class="nav-link link">Портфоліо</a></li>
+          <li><a href="./contacts.html" class="nav-link link">Контакти</a></li>
+        </ul>
+      </nav>
+      <ul class="header-contact list">
+        <li><a href="mailto:info@devstudio.com" class="header-email link">info@devstudio.com</a></li>
+        <li><a href="tel:+380991111111" class="header-tel link">+38 099 111 11 11</a></li>
       </ul>
-    </nav>
-    <ul class="header-contact list">
-      <li><a href="mailto:info@devstudio.com" class="header-email link">info@devstudio.com</a></li>
-      <li><a href="tel:+380991111111" class="header-tel link">+38 099 111 11 11</a></li>
-    </ul>
+    </div>
   </header>
   <!-- Main -->
   <main class="index-main">
     <section class="index-main-section">
-      <h1 class="main-title">эффективные решения для вашего бизнеса</h1>
-      <button type="button" class="order-button">Заказать услугу</button>
+      <div class="index-main-container container">
+        <h1 class="main-title">ефективні рішення для вашого бізнесу</h1>
+        <button type="button" class="order-button">Замовити послугу</button>
+      </div>
     </section>
     <!-- Company features -->
-    <section class="features">
-      <ul class="features-list list">
-        <li class="feature1">
-          <h3 class="feature-name">Внимание к деталям</h3>
-          <p class="feature-text">
-            Идейные соображения, а также начало повседневной работы по формированию позиции.
-          </p>
-        </li>
-        <li class="feature2">
-          <h3 class="feature-name">Пунктуальность</h3>
-          <p class="feature-text">
-            Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-          </p>
-        </li>
-        <li class="feature3">
-          <h3 class="feature-name">Планирование</h3>
-          <p class="feature-text">
-            Равным образом консультация с широким активом в значительной степени обуславливает.
-          </p>
-        </li>
-        <li class="feature4">
-          <h3 class="feature-name">Современные технологии</h3>
-          <p class="feature-text">
-            Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-          </p>
-        </li>
-      </ul>
+    <section class="features section">
+      <div class="features-container container">
+        <ul class="features-list list">
+          <li class="feature-item">
+            <h3 class="feature-name">увага до деталей</h3>
+            <p class="feature-text">
+              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+            </p>
+          </li>
+          <li class="feature-item">
+            <h3 class="feature-name">пунктуальність</h3>
+            <p class="feature-text">
+              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+            </p>
+          </li>
+          <li class="feature-item">
+            <h3 class="feature-name">планування</h3>
+            <p class="feature-text">
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
+          </li>
+          <li class="feature-item">
+            <h3 class="feature-name">сучасні технології</h3>
+            <p class="feature-text">
+              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+            </p>
+          </li>
+        </ul>
+      </div>
     </section>
     <!-- What we do? -->
-    <section class="work-section">
-      <h2 class="work-title">Чем мы занимаемся</h2>
-      <ul class="work-list list">
-        <li><img src="images/image1.jpg" alt="image1" width="370" /></li>
-        <li><img src="images/image2.jpg" alt="image2" width="370" /></li>
-        <li><img src="images/image3.jpg" alt="image3" width="370" /></li>
-      </ul>
+    <section class="work-section section">
+      <div class="work-container container">
+        <h2 class="work-title">Чим ми займаємося</h2>
+        <ul class="work-list list">
+          <li class="work-item"><img src="images/image1.jpg" alt="image1" /></li>
+          <li class="work-item"><img src="images/image2.jpg" alt="image2" /></li>
+          <li class="work-item"><img src="images/image3.jpg" alt="image3" /></li>
+        </ul>
+      </div>
     </section>
     <!-- Our team -->
-    <section class="staff-section">
-      <h2 class="staff-title">Наша команда</h2>
-      <ul class="staff-list list">
-        <li>
-          <img src="images/staff/frontend.jpg" alt="Игорь Демьяненко" width="270" />
-          <h3 class="staff-name">Игорь Демьяненко</h3>
-          <p class="staff-position">Product Designer</p>
-        </li>
-        <li>
-          <img src="images/staff/marketing.jpg" alt="Ольга Репина" width="270" />
-          <h3 class="staff-name">Ольга Репина</h3>
-          <p class="staff-position">Frontend Developer</p>
-        </li>
-        <li>
-          <img src="images/staff/product_designer.jpg" alt="Николай Тарасов" width="270" />
-          <h3 class="staff-name">Николай Тарасов</h3>
-          <p class="staff-position">Marketing</p>
-        </li>
-        <li>
-          <img src="images/staff/UIdesigner.jpg" alt="Михаил Ермаков" width="270" />
-          <h3 class="staff-name">Михаил Ермаков</h3>
-          <p class="staff-position">UI Designer</p>
-        </li>
-      </ul>
+    <section class="staff-section section">
+      <div class="staff-container container">
+        <h2 class="staff-title">Наша команда</h2>
+        <ul class="staff-list list">
+          <li class="staff-item">
+            <img src="images/staff/product_designer.jpg" alt="Ігор Дем'яненко" />
+            <h3 class="staff-name">Ігор Дем'яненко</h3>
+            <p class="staff-position">Product Designer</p>
+          </li>
+          <li class="staff-item">
+            <img src="images/staff/frontend.jpg" alt="Ольга Рєпіна" />
+            <h3 class="staff-name">Ольга Репина</h3>
+            <p class="staff-position">Frontend Developer</p>
+          </li>
+          <li class="staff-item">
+            <img src="images/staff/marketing.jpg" alt="Микола Тарасов" />
+            <h3 class="staff-name">Николай Тарасов</h3>
+            <p class="staff-position">Marketing</p>
+          </li>
+          <li class="staff-item">
+            <img src="images/staff/UIdesigner.jpg" alt="Михайло Єрмаков" />
+            <h3 class="staff-name">Михаил Ермаков</h3>
+            <p class="staff-position">UI Designer</p>
+          </li>
+        </ul>
+      </div>
     </section>
   </main>
   <!-- Footer -->
   <footer class="footer">
-    <a href="./index.html" class="footer-logo link"><span>Web</span>Studio</a>
-    <address class="address">
-      <ul class="footer-contact-list list">
-        <li><a
-            href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858 "
-            class="contact-address link">г.Киев, пр-т Леси Украинки, 26</a></li>
-        <li><a href="mailto:info@example.com" class="footer-email">info@example.com</a></li>
-        <li><a href="tel:+380991111111" class="footer-tel">+38 099 111 11 11</a></li>
-      </ul>
-    </address>
+    <div class="footer-container container">
+      <a href="./index.html" class="footer-logo link"><span>Web</span>Studio</a>
+      <address class="address">
+        <ul class="footer-contact-list list">
+          <li><a
+              href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858 "
+              class="contact-address link">г.Киев, пр-т Леси Украинки, 26</a></li>
+          <li><a href="mailto:info@example.com" class="footer-email">info@example.com</a></li>
+          <li><a href="tel:+380991111111" class="footer-tel">+38 099 111 11 11</a></li>
+        </ul>
+      </address>
+    </div>
   </footer>
 </body>
 
