--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel=“stylesheet” href=“https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css”
+        integrity=“sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==”
+        crossorigin=“anonymous” referrerpolicy=“no-referrer” />
     <link rel="stylesheet" href="./css/styles.css">
     <title>Document</title>
 </head>
@@ -18,98 +21,119 @@
 <body>
     <!-- Header -->
     <header class="header">
-        <a href="./index.html" class="header-logo link"><span>Web</span>Studio</a>
-        <!-- Navigation -->
-        <nav class="header-nav">
-            <ul class="nav list">
-                <li><a href="./index.html" class="nav-link link">Студия</a></li>
-                <li><a href="./portfolio.html" class="nav-link link current  ">Портфолио</a></li>
-                <li><a href="./contacts.html" class="nav-link link">Контакты</a></li>
+        <div class="header-container container">
+            <a href="./index.html" class="header-logo link"><span>Web</span>Studio</a>
+            <!-- Navigation -->
+            <nav class="header-nav">
+                <ul class="nav list">
+                    <li><a href="./index.html" class="nav-link link">Студия</a></li>
+                    <li><a href="./portfolio.html" class="nav-link link current  ">Портфолио</a></li>
+                    <li><a href="./contacts.html" class="nav-link link">Контакты</a></li>
+                </ul>
+            </nav>
+            <ul class="header-contact list">
+                <li><a href="mailto:info@devstudio.com" class="header-email link">info@devstudio.com</a></li>
+                <li><a href="tel:+380991111111" class="header-tel link">+38 099 111 11 11</a></li>
             </ul>
-        </nav>
-        <ul class="header-contact list">
-            <li><a href="mailto:info@devstudio.com" class="header-email link">info@devstudio.com</a></li>
-            <li><a href="tel:+380991111111" class="header-tel link">+38 099 111 11 11</a></li>
-        </ul>
+        </div>
     </header>
     <!-- Портфолио проекты -->
     <main class="portfolio-main">
-        <section class="portfolio-main-section">
-            <!-- Кнопки сортировки -->
-            <ul class="sort-buttons-list list">
-                <li><button type="button" class="sort-btn">Все</button></li>
-                <li><button type="button" class="sort-btn">Веб-сайты</button></li>
-                <li><button type="button" class="sort-btn">Приложения</button></li>
-                <li><button type="button" class="sort-btn">Дизайн</button></li>
-                <li><button type="button" class="sort-btn">Маркетинг</button></li>
-            </ul>
+        <section class="portfolio-main-section section">
+            <div class="container">
+                <!-- Кнопки сортировки -->
+                <ul class="sort-buttons-list list">
+                    <li><button type="button" class="sort-btn">Все</button></li>
+                    <li><button type="button" class="sort-btn">Веб-сайты</button></li>
+                    <li><button type="button" class="sort-btn">Приложения</button></li>
+                    <li><button type="button" class="sort-btn">Дизайн</button></li>
+                    <li><button type="button" class="sort-btn">Маркетинг</button></li>
+                </ul>
+                <!-- Список проектов -->
+                <h1 class="visually-hidden">Портфолио проектов</h1>
+                <ul class="project-list list">
+                    <li class="project-card">
+                        <img src="./images/portfolio/technokryak.jpg" alt="Веб-сайт Технокряк">
+                        <div class="project-description">
+                            <h2 class="project-name">Технокряк</h2>
+                            <p class="project-type">Веб-сайт</p>
+                        </div>
 
-            <!-- Список проектов -->
-            <h1 class="visually-hidden">Портфолио проектов</h1>
-            <ul class="project-list list">
-                <li class="project-card">
-                    <img src="./images/portfolio/technokryak.jpg" alt="Веб-сайт Технокряк" width="370" height="294">
-                    <h2 class="project-name">Технокряк</h2>
-                    <p class="project-type">Веб-сайт</p>
-                </li>
-                <li class="project-card">
-                    <img src="./images/portfolio/poster.jpg" alt="Постер New Orlean vs Golden Star" width="370"
-                        height="294">
-                    <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
-                    <p class="project-type">Дизайн</p>
-                </li>
-                <li class="project-card">
-                    <img src="./images/portfolio/seafood_restaurant.jpg" alt="Ресторан Seafood" width="370"
-                        height="294">
-                    <h2 class="project-name">Ресторан Seafood</h2>
-                    <p class="project-type">Приложение</p>
-                </li>
-                <li class="project-card">
-                    <img src="./images/portfolio/prime.jpg" alt="Проект Prime" width="370" height="294">
-                    <h2 class="project-name">Проект Prime</h2>
-                    <p class="project-type">Маркетинг</p>
-                </li>
-                <li class="project-card">
-                    <img src="./images/portfolio/boxes.jpg" alt="Проект Boxes" width="370" height="294">
-                    <h2 class="project-name">Проект Boxes</h2>
-                    <p class="project-type">Приложение</p>
-                </li>
-                <li class="project-card">
-                    <img src="./images/portfolio/inspiration_borders.jpg" alt="Дисплей" width="370" height="294">
-                    <h2 class="project-name">Inspiration has no Borders</h2>
-                    <p class="project-type">Веб-сайт</p>
-                </li>
+                    </li>
+                    <li class="project-card">
+                        <img src="./images/portfolio/poster.jpg" alt="Постер New Orlean vs Golden Star">
+                        <div class="project-description">
+                            <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
+                            <p class="project-type">Дизайн</p>
+                        </div>
+                    </li>
+                    <li class="project-card">
+                        <img src="./images/portfolio/seafood_restaurant.jpg" alt="Ресторан Seafood">
+                        <div class="project-description">
+                            <h2 class="project-name">Ресторан Seafood</h2>
+                            <p class="project-type">Приложение</p>
+                        </div>
+                    </li>
+                    <li class="project-card">
+                        <img src="./images/portfolio/prime.jpg" alt="Проект Prime">
+                        <div class="project-description">
+                            <h2 class="project-name">Проект Prime</h2>
+                            <p class="project-type">Маркетинг</p>
+                        </div>
+                    </li>
+                    <li class="project-card">
+                        <img src="./images/portfolio/boxes.jpg" alt="Проект Boxes">
+                        <div class="project-description">
+                            <h2 class="project-name">Проект Boxes</h2>
+                            <p class="project-type">Приложение</p>
+                        </div>
+                    </li>
+                    <li class="project-card">
+                        <img src="./images/portfolio/inspiration_borders.jpg" alt="Дисплей">
+                        <div class="project-description">
+                            <h2 class="project-name">Inspiration has no Borders</h2>
+                            <p class="project-type">Веб-сайт</p>
+                        </div>
+                    </li>
 
-                <li class="project-card">
-                    <img src="./images/portfolio/limited_edition.jpg" alt="Книга" width="370" height="294">
-                    <h2 class="project-name">Издание Limited Edition</h2>
-                    <p class="project-type">Дизайн</p>
-                </li>
-                <li class="project-card">
-                    <img src="./images/portfolio/lab.jpg" alt="Проект LAB" width="370" height="294">
-                    <h2 class="project-name">Проект LAB</h2>
-                    <p class="project-type">Маркетинг</p>
-                </li>
-                <li class="project-card">
-                    <img src="./images/portfolio/growing_business.jpg" alt="Развивающийся бизнес" width="370"
-                        height="294">
-                    <h2 class="project-name">Growing Business</h2>
-                    <p class="project-type">Приложение</p>
-                </li>
-            </ul>
+                    <li class="project-card">
+                        <img src="./images/portfolio/limited_edition.jpg" alt="Книга">
+                        <div class="project-description">
+                            <h2 class="project-name">Издание Limited Edition</h2>
+                            <p class="project-type">Дизайн</p>
+                        </div>
+                    </li>
+                    <li class="project-card">
+                        <img src="./images/portfolio/lab.jpg" alt="Проект LAB">
+                        <div class="project-description">
+                            <h2 class="project-name">Проект LAB</h2>
+                            <p class="project-type">Маркетинг</p>
+                        </div>
+                    </li>
+                    <li class="project-card">
+                        <img src="./images/portfolio/growing_business.jpg" alt="Развивающийся бизнес">
+                        <div class="project-description">
+                            <h2 class="project-name">Growing Business</h2>
+                            <p class="project-type">Приложение</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <!-- Footer -->
     <footer class="footer">
-        <a href="./index.html" class="footer-logo link"><span>Web</span>Studio</a>
-        <address class="address">
-            <ul class="footer-contact-list list">
-                <li><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858 "
-                        class="contact-address link">г.Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@example.com" class="footer-email">info@example.com</a></li>
-                <li><a href="tel:+380991111111" class="footer-tel">+38 099 111 11 11</a></li>
-            </ul>
-        </address>
+        <div class="footer-container container">
+            <a href="./index.html" class="footer-logo link"><span>Web</span>Studio</a>
+            <address class="address">
+                <ul class="footer-contact-list list">
+                    <li><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858 "
+                            class="contact-address link">г.Киев, пр-т Леси Украинки, 26</a></li>
+                    <li><a href="mailto:info@example.com" class="footer-email">info@example.com</a></li>
+                    <li><a href="tel:+380991111111" class="footer-tel">+38 099 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 
