--- a/portfolio.html
+++ b/portfolio.html
@@ -26,9 +26,9 @@
             <!-- Navigation -->
             <nav class="header-nav">
                 <ul class="nav list">
-                    <li><a href="./index.html" class="nav-link link">Студия</a></li>
-                    <li><a href="./portfolio.html" class="nav-link link current  ">Портфолио</a></li>
-                    <li><a href="./contacts.html" class="nav-link link">Контакты</a></li>
+                    <li class="nav-item"><a href="./index.html" class="nav-link link">Студия</a></li>
+                    <li class="nav-item current "><a href="./portfolio.html" class="nav-link link">Портфолио</a></li>
+                    <li class="nav-item"><a href="./contacts.html" class="nav-link link">Контакты</a></li>
                 </ul>
             </nav>
             <ul class="header-contact list">
@@ -62,7 +62,12 @@
                 <ul class="project-list list">
                     <li class="project-card">
                         <a href="" class="project-card-link link">
-                            <img src="./images/portfolio/technokryak.jpg" alt="Веб-сайт Технокряк">
+                            <div class="project-wrap">
+                                <img src="./images/portfolio/technokryak.jpg" alt="Веб-сайт Технокряк">
+                                <p class="project-description-top">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
                             <div class="project-description">
                                 <h2 class="project-name">Технокряк</h2>
                                 <p class="project-type">Веб-сайт</p>
@@ -71,7 +76,12 @@
                     </li>
                     <li class="project-card">
                         <a href="" class="project-card-link link">
-                            <img src="./images/portfolio/poster.jpg" alt="Постер New Orlean vs Golden Star">
+                            <div class="project-wrap">
+                                <img src="./images/portfolio/poster.jpg" alt="Постер New Orlean vs Golden Star">
+                                <p class="project-description-top">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
                             <div class="project-description">
                                 <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
                                 <p class="project-type">Дизайн</p>
@@ -80,7 +90,12 @@
                     </li>
                     <li class="project-card">
                         <a href="" class="project-card-link link">
-                            <img src="./images/portfolio/seafood_restaurant.jpg" alt="Ресторан Seafood">
+                            <div class="project-wrap">
+                                <img src="./images/portfolio/seafood_restaurant.jpg" alt="Ресторан Seafood">
+                                <p class="project-description-top">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
                             <div class="project-description">
                                 <h2 class="project-name">Ресторан Seafood</h2>
                                 <p class="project-type">Приложение</p>
@@ -89,7 +104,12 @@
                     </li>
                     <li class="project-card">
                         <a href="" class="project-card-link link">
-                            <img src="./images/portfolio/prime.jpg" alt="Проект Prime">
+                            <div class="project-wrap">
+                                <img src="./images/portfolio/prime.jpg" alt="Проект Prime">
+                                <p class="project-description-top">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
                             <div class="project-description">
                                 <h2 class="project-name">Проект Prime</h2>
                                 <p class="project-type">Маркетинг</p>
@@ -98,7 +118,12 @@
                     </li>
                     <li class="project-card">
                         <a href="" class="project-card-link link">
-                            <img src="./images/portfolio/boxes.jpg" alt="Проект Boxes">
+                            <div class="project-wrap">
+                                <img src="./images/portfolio/boxes.jpg" alt="Проект Boxes">
+                                <p class="project-description-top">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
                             <div class="project-description">
                                 <h2 class="project-name">Проект Boxes</h2>
                                 <p class="project-type">Приложение</p>
@@ -107,7 +132,12 @@
                     </li>
                     <li class="project-card">
                         <a href="" class="project-card-link link">
-                            <img src="./images/portfolio/inspiration_borders.jpg" alt="Дисплей">
+                            <div class="project-wrap">
+                                <img src="./images/portfolio/inspiration_borders.jpg" alt="Дисплей">
+                                <p class="project-description-top">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
                             <div class="project-description">
                                 <h2 class="project-name">Inspiration has no Borders</h2>
                                 <p class="project-type">Веб-сайт</p>
@@ -117,7 +147,12 @@
 
                     <li class="project-card">
                         <a href="" class="project-card-link link">
-                            <img src="./images/portfolio/limited_edition.jpg" alt="Книга">
+                            <div class="project-wrap">
+                                <img src="./images/portfolio/limited_edition.jpg" alt="Книга">
+                                <p class="project-description-top">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
                             <div class="project-description">
                                 <h2 class="project-name">Издание Limited Edition</h2>
                                 <p class="project-type">Дизайн</p>
@@ -126,7 +161,12 @@
                     </li>
                     <li class="project-card">
                         <a href="" class="project-card-link link">
-                            <img src="./images/portfolio/lab.jpg" alt="Проект LAB">
+                            <div class="project-wrap">
+                                <img src="./images/portfolio/lab.jpg" alt="Проект LAB">
+                                <p class="project-description-top">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
                             <div class="project-description">
                                 <h2 class="project-name">Проект LAB</h2>
                                 <p class="project-type">Маркетинг</p>
@@ -135,7 +175,12 @@
                     </li>
                     <li class="project-card">
                         <a href="" class="project-card-link link">
-                            <img src="./images/portfolio/growing_business.jpg" alt="Развивающийся бизнес">
+                            <div class="project-wrap">
+                                <img src="./images/portfolio/growing_business.jpg" alt="Развивающийся бизнес">
+                                <p class="project-description-top">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
                             <div class="project-description">
                                 <h2 class="project-name">Growing Business</h2>
                                 <p class="project-type">Приложение</p>
