--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       <!-- Navigation -->
       <nav class="header-nav">
         <ul class="nav list">
-          <li><a href="./index.html" class="nav-link link current">Студія</a></li>
-          <li><a href="./portfolio.html" class="nav-link link">Портфоліо</a></li>
-          <li><a href="./contacts.html" class="nav-link link">Контакти</a></li>
+          <li class="nav-item current"><a href="./index.html" class="nav-link link">Студія</a></li>
+          <li class="nav-item"><a href="./portfolio.html" class="nav-link link">Портфоліо</a></li>
+          <li class="nav-item"><a href="./contacts.html" class="nav-link link">Контакти</a></li>
         </ul>
       </nav>
       <ul class="header-contact list">
@@ -48,7 +48,7 @@
     <section class="index-main-section">
       <div class="container">
         <h1 class="main-title">ефективні рішення для вашого бізнесу</h1>
-        <button type="button" class="order-button">Замовити послугу</button>
+        <button type="button" class="order-button" data-modal-open>Замовити послугу</button>
       </div>
     </section>
     <!-- Company features -->
@@ -99,9 +99,21 @@
       <div class="work-container container">
         <h2 class="work-title">Чим ми займаємося</h2>
         <ul class="work-list list">
-          <li class="work-item"><img src="images/image1.jpg" alt="image1" /></li>
-          <li class="work-item"><img src="images/image2.jpg" alt="image2" /></li>
-          <li class="work-item"><img src="images/image3.jpg" alt="image3" /></li>
+          <li class="work-item"><img src="images/image1.jpg" alt="Десктопні додатки" />
+            <!-- <div class="work-name-container"> -->
+            <h3 class="work-name">десктопні додатки</h3>
+            <!-- </div> -->
+          </li>
+          <li class="work-item"><img src="images/image2.jpg" alt="Мобільні додатки" />
+            <div class="work-name-container">
+              <h3 class="work-name">мобільні додатки</h3>
+            </div>
+          </li>
+          <li class="work-item"><img src="images/image3.jpg" alt="Дизайнерські рішення" />
+            <div class="work-name-container">
+              <h3 class="work-name">дизайнерські рішення</h3>
+            </div>
+          </li>
         </ul>
       </div>
     </section>
@@ -372,6 +384,15 @@
       </div>
     </div>
   </footer>
+  <!-- Modal -->
+  <div class="backdrop is-hidden" data-modal>
+    <div class="modal">
+      <button type="button" class="closeBtn" data-modal-close> <svg class="closeBtn-icon" width="18" height="18">
+          <use href="./images/sprites/icons.svg#icon-close-black-18dp"></use>
+        </svg></button>
+    </div>
+  </div>
+  <script src="./js/modal.js"></script>
 </body>
 
 </html>
